--- a/src/i_themes/default/forms/_i_form.scss
+++ b/src/i_themes/default/forms/_i_form.scss
@@ -24,7 +24,7 @@ _______________________________________________________________________*/
             &[type="checkbox"]+span:first-of-type {
 
                 border: none ;
-                padding: auto ;
+                padding: initial ;
             }
         }
 
