--- a/src/i_themes/default/navbars/_bg_style.scss
+++ b/src/i_themes/default/navbars/_bg_style.scss
@@ -28,7 +28,7 @@ ________________________________________________________________________________
 
         a:hover {
 
-            @include global-bg-look( "!transparent", $white-color) ;
+            @include global-bg-look( "transparent", $white-color) ;
         }
     }
 }
