better organize development's folder structure.

--- a/src/sass/_i_font_def.scss
+++ b/src/sass/_i_font_def.scss
@@ -4,7 +4,7 @@
 
 /*pour plus de clarté ce fichier sera inclue dans le fichier css commun ou générale*/
 
-$font-path: "src/fonts" ;
+$font-path: "./fonts" ;
 
 
 @mixin default-font-aspect {
