--- a/src/sass/_i_base.scss
+++ b/src/sass/_i_base.scss
@@ -70,6 +70,11 @@ table {
 /* Style on "specials and operatings" elements like buttons, textfields, ... 
 ----------------------------------------------------------------------------*/
 
+q, blockquote {
+    
+    font-family: $quote-font-family ;
+}
+
 a {
     
     text-decoration: none ;
