--- a/src/sass/i_skins/_default.scss
+++ b/src/sass/i_skins/_default.scss
@@ -35,6 +35,7 @@ $shadow-color: rgba(103, 103, 103, 0.7) ;
 
 $default-font-family: "DejaVu Sans", _DejaVu_Sans, verdana, OpenSans, sans-serif ;
 $item-font-family: Ubuntu, _Ubuntu, $default-font-family ;
+$quote-font-family: Purisa, i_Purisa, "Lucida Handwriting", "Comic Sans Ms" ;
 
 
 // /* Global's mixins declarations
